service-mesh/custom-routing/3. weighted-routing-100-v2/category-api/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: category-virtual-service
spec:
  hosts:
  - category-api-service.default.svc.cluster.local
  gateways:
    - sample-app
  http:
  - route:
    - destination:
        host: category-api-service.default.svc.cluster.local
        subset: safe-subset
      weight: 0
    - destination:
        host: category-api-service.default.svc.cluster.local
        subset: risky-subset
      weight: 100
---
